Fixes background images on tablet portrait view.

--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -245,6 +245,11 @@
         padding: 1em;
     }
 
+    #background_left,
+    #background_right {
+        background-size: initial;
+    }
+
     .container {
         max-width: 960px;
     }
